# ollama-kubernetes-operator

./: Cargo.toml  README.md  justfile
src/: main.rs
src/consts/: mod.rs
