[package]
name = "ollama-kubernetes-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
